# linkerra

./: README.md  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: page.tsx
src/app/converter/: page.tsx
src/app/drive-sync/: page.tsx
src/app/file-transfer/: page.tsx
src/app/smart-organizer/: page.tsx
src/components/: back-button.tsx
src/components/ui/: piechart.tsx
