[package]
name = "linkerra"
version = "0.1.0"
description = "A file transfer and management application."
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
anyhow = "1.0.98"
iroh = { version = "0.35.0", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
iroh-base = "0.35.0"
iroh-blobs = { version = "0.35.0", features = ["rpc"] }
tokio = "1.45.1"
qrcode = "0.14.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-barcode-scanner = "2.2.1"
serde = "1.0.219"
walkdir = "2.5.0"
regex = "1.11.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.2.1"
